# stethoscope

./: README.md  pyproject.toml
stethoscope/: bpftrace.py  main.py  supercollider.py
