[tool.poetry]
name = "stethoscope"
version = "0.1.0"
description = ""
authors = ["Zack <zack@zacharymaril.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "^3.4.0"
cryptography = "<43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
