[tool.poetry]
name = "stethoscope"
version = "0.1.0"
description = ""
authors = ["Zack <zack@zacharymaril.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "^3.4.0"
cryptography = "<43.0.0"
dawdreamer = "^0.8.0"
supriya = "^24.7b0"
beepy = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
